# TimerLib

./: CMakeLists.txt  README.md
cmake/: TimerLibConfig.cmake.in
include/TimerLib/: timer.h
src/: timer.cpp
